[package]
name = "$PKG"
version = "0.1.0"
edition = "$EDITION"
license-file = "LICENSE"
description = "$DESCRIPTION"
documentation = "https://docs.rs/$PKG"
repository = "https://github.com/negrel/$PKG"
readme = "README.md"
authors = ["Alexandre Negrel <alexandre@negrel.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
